--- a/src/app/sistema/components/clientes/clientes.component.html
+++ b/src/app/sistema/components/clientes/clientes.component.html
@@ -63,7 +63,7 @@
                     <td class="text-nowrap">{{ cliente.provincia }}</td>
                     <td class="text-nowrap">
                         <button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1 pt-1" title="VER STOCK"
-                            (click)="navigate('stock/' + cliente.id)"><i class="pi pi-box"></i></button>
+                            (click)="navigate('stockPorClientes/' + cliente.id)"><i class="pi pi-box"></i></button>
                         <button type="button" class="btn btn-sm btn-success m-0 mx-1 p-0 px-1 pt-1"
                             title="VER INGRESOS DE MERCADERIA" (click)="navigate('ingresos/' + cliente.id)"><i
                                 class="pi pi-download"></i></button>
