--- a/src/app/sistema/components/operaciones/operaciones.component.html
+++ b/src/app/sistema/components/operaciones/operaciones.component.html
@@ -11,11 +11,11 @@
             <button type="button" class="btn btn-secondary m-2" (click)="mostrarModalFiltro()">FILTROS</button>
         </div>
         <div class="col-12 col-md-7 text-md-end">
-            <button type="button" class="btn btn-secondary m-2 disabled" (click)="listadoXLSX()"><i
+            <button type="button" class="btn btn-secondary m-2" (click)="listadoXLSX()"><i
                     class="pi pi-file-excel me-2"></i>LISTADO</button>
-            <button type="button" class="btn btn-secondary m-2 disabled" (click)="detalleXLSX()"><i
+            <button type="button" class="btn btn-secondary m-2" (click)="detalleXLSX()"><i
                     class="pi pi-file-excel me-2"></i>REPORTE</button>
-            <button type="button" class="btn btn-secondary m-2 disabled" (click)="datosXLSX()"><i
+            <button type="button" class="btn btn-secondary m-2" (click)="datosXLSX()"><i
                     class="pi pi-file-excel me-2"></i>DATOS</button>
         </div>
     </div>
